--- a/Brainf_ck-sharp.UWP/MultilingualResources/Brainf_ck-sharp.UWP.it.xlf
+++ b/Brainf_ck-sharp.UWP/MultilingualResources/Brainf_ck-sharp.UWP.it.xlf
@@ -265,6 +265,31 @@
           <source>Save</source>
           <target state="new">Save</target>
         </trans-unit>
+        <trans-unit id="FilenameBlock.Text" translate="yes" xml:space="preserve">
+          <source>File name:</source>
+          <target state="new">File name:</target>
+        </trans-unit>
+        <trans-unit id="CodePreviewBlock.Text" translate="yes" xml:space="preserve">
+          <source>Code preview:</source>
+          <target state="new">Code preview:</target>
+        </trans-unit>
+        <trans-unit id="CodeTitleBox.PlaceholderText" translate="yes" xml:space="preserve">
+          <source>Enter the code title</source>
+          <target state="new">Enter the code title</target>
+        </trans-unit>
+        <trans-unit id="AlreadyUsed" translate="yes" xml:space="preserve">
+          <source>Already used</source>
+          <target state="new">Already used</target>
+        </trans-unit>
+        <trans-unit id="Available" translate="yes" xml:space="preserve">
+          <source>Available</source>
+          <target state="new">Available</target>
+        </trans-unit>
+        <trans-unit id="Empty" translate="yes" xml:space="preserve">
+          <source>Empty</source>
+          <target state="new">Empty</target>
+          <note from="MultilingualBuild" annotates="source" priority="2">Empty title for a code to save</note>
+        </trans-unit>
       </group>
     </body>
   </file>
