--- a/Brainf_ck-sharp.UWP/Strings/it/Resources.resw
+++ b/Brainf_ck-sharp.UWP/Strings/it/Resources.resw
@@ -169,4 +169,108 @@
   <data name="SkipButton.Title" xml:space="preserve">
     <value>Salta</value>
   </data>
+  <data name="Favorites" xml:space="preserve">
+    <value>Preferiti</value>
+  </data>
+  <data name="PersonalCodes" xml:space="preserve">
+    <value>Codici personali</value>
+  </data>
+  <data name="SampleCodes" xml:space="preserve">
+    <value>Codici di esempio</value>
+  </data>
+  <data name="MoreCodes" xml:space="preserve">
+    <value>codici sorgente</value>
+  </data>
+  <data name="OneCode" xml:space="preserve">
+    <value>1 codice sorgente</value>
+  </data>
+  <data name="CodeLibrary" xml:space="preserve">
+    <value>Libreria codici</value>
+  </data>
+  <data name="CodeLibraryButton.Label" xml:space="preserve">
+    <value>Sfoglia libreria codici</value>
+  </data>
+  <data name="Sum" xml:space="preserve">
+    <value>Somma</value>
+  </data>
+  <data name="UnicodeSum" xml:space="preserve">
+    <value>Somma Unicode</value>
+  </data>
+  <data name="UnicodeValue" xml:space="preserve">
+    <value>Valore Unicode</value>
+  </data>
+  <data name="RunTitle" xml:space="preserve">
+    <value>Esegui</value>
+  </data>
+  <data name="SaveAsButton.Label" xml:space="preserve">
+    <value>Salva con nome</value>
+  </data>
+  <data name="SaveButton.Label" xml:space="preserve">
+    <value>Salva</value>
+  </data>
+  <data name="FilenameBlock.Text" xml:space="preserve">
+    <value>Nome file:</value>
+  </data>
+  <data name="CodePreviewBlock.Text" xml:space="preserve">
+    <value>Anteprima codice:</value>
+  </data>
+  <data name="CodeTitleBox.PlaceholderText" xml:space="preserve">
+    <value>Inserisci un titolo</value>
+  </data>
+  <data name="AlreadyUsed" xml:space="preserve">
+    <value>Nome già in uso</value>
+  </data>
+  <data name="Available" xml:space="preserve">
+    <value>Disponibile</value>
+  </data>
+  <data name="Empty" xml:space="preserve">
+    <value>Nome non valido</value>
+    <comment>Empty title for a code to save</comment>
+  </data>
+  <data name="Clipboard" xml:space="preserve">
+    <value>Copia negli appunti</value>
+  </data>
+  <data name="Delete" xml:space="preserve">
+    <value>Elimina</value>
+  </data>
+  <data name="Email" xml:space="preserve">
+    <value>Invia per email</value>
+  </data>
+  <data name="Favorite" xml:space="preserve">
+    <value>Aggiungi ai preferiti</value>
+    <comment>Add to favorites</comment>
+  </data>
+  <data name="OSShare" xml:space="preserve">
+    <value>Condivisione OS</value>
+  </data>
+  <data name="Rename" xml:space="preserve">
+    <value>Rinomina</value>
+  </data>
+  <data name="SaveFile" xml:space="preserve">
+    <value>Salva file</value>
+  </data>
+  <data name="Share" xml:space="preserve">
+    <value>Condividi</value>
+  </data>
+  <data name="Unfavorite" xml:space="preserve">
+    <value>Rimuovi dai preferiti</value>
+  </data>
+  <data name="PlainText" xml:space="preserve">
+    <value>Testo semplice</value>
+  </data>
+  <data name="SharedCode" xml:space="preserve">
+    <value>Codice condiviso Brainf*ck#</value>
+  </data>
+  <data name="ShareError" xml:space="preserve">
+    <value>Errore condivisione</value>
+  </data>
+  <data name="ShareErrorBody" xml:space="preserve">
+    <value>C'è stato un errore durante la condivisione del codice, riprova più tardi</value>
+  </data>
+  <data name="ShareCompleted" xml:space="preserve">
+    <value>Condivisione completata</value>
+  </data>
+  <data name="ShareCompletedBody" xml:space="preserve">
+    <value>Il codice selezionato è stato condiviso correttamente</value>
+  </data>
 </root>
