--- a/Brainf_ck-sharp.UWP/Strings/en-US/Resources.resw
+++ b/Brainf_ck-sharp.UWP/Strings/en-US/Resources.resw
@@ -390,6 +390,9 @@
   <data name="CodeSavedBody" xml:space="preserve">
     <value>The new source code has been saved correctly</value>
   </data>
+  <data name="Debug" xml:space="preserve">
+    <value>Debug</value>
+  </data>
   <data name="HeaderComments" xml:space="preserve">
     <value>Header comments</value>
   </data>
