--- a/Brainf_ck-sharp.UWP/Strings/en-US/Resources.resw
+++ b/Brainf_ck-sharp.UWP/Strings/en-US/Resources.resw
@@ -402,6 +402,9 @@
   <data name="UndoButton.Label" xml:space="preserve">
     <value>Undo</value>
   </data>
+  <data name="MoveButtonmLabel" xml:space="preserve">
+    <value>Move</value>
+  </data>
   <data name="NewLineButton.Label" xml:space="preserve">
     <value>New line</value>
   </data>
