--- a/Brainf_ck-sharp.UWP/Strings/it/Resources.resw
+++ b/Brainf_ck-sharp.UWP/Strings/it/Resources.resw
@@ -303,4 +303,25 @@
   <data name="MoveButtonmLabel" xml:space="preserve">
     <value>Sposta cursore</value>
   </data>
+  <data name="About" xml:space="preserve">
+    <value>Informazioni</value>
+  </data>
+  <data name="AboutButton.Label" xml:space="preserve">
+    <value>Informazioni</value>
+  </data>
+  <data name="RateStoreBlock.Text" xml:space="preserve">
+    <value>Vota nello Store</value>
+  </data>
+  <data name="ContactsBlock.Text" xml:space="preserve">
+    <value>Contatti</value>
+  </data>
+  <data name="DevelopedByPart2Run.Text" xml:space="preserve">
+    <value>Grazie ad Andrea Salvati per il suo aiuto con l'algoritmo originale dell'interprete di Brainf*ck, e a Camil Demetrescu per l'idea di portare Brainf*ck# su Windows 10.</value>
+  </data>
+  <data name="DevelopedByRun.Text" xml:space="preserve">
+    <value>Sviluppata da</value>
+  </data>
+  <data name="SendFeedbackBlock.Text" xml:space="preserve">
+    <value>Invia feedback</value>
+  </data>
 </root>
