--- a/Brainf_ck-sharp.UWP/Strings/it/Resources.resw
+++ b/Brainf_ck-sharp.UWP/Strings/it/Resources.resw
@@ -324,4 +324,40 @@
   <data name="SendFeedbackBlock.Text" xml:space="preserve">
     <value>Invia feedback</value>
   </data>
+  <data name="DevSupportTitle.Text" xml:space="preserve">
+    <value>Scegli un'opzione di supporto per lo sviluppatore dell'app</value>
+  </data>
+  <data name="Donate" xml:space="preserve">
+    <value>Fai una donazione</value>
+  </data>
+  <data name="DonateButton.Text" xml:space="preserve">
+    <value>Fai una donazione</value>
+  </data>
+  <data name="DonateCoffee.PickerDescription" xml:space="preserve">
+    <value>Offri un caffè allo sviluppatore</value>
+  </data>
+  <data name="DonateLove.PickerDescription" xml:space="preserve">
+    <value>Ti senti generoso? Scegli questa opzione per mostrare allo sviluppatore quanto ti piace questa app!</value>
+  </data>
+  <data name="DonatePresent.PickerDescription" xml:space="preserve">
+    <value>Fai un piccolo regalo per supportare lo sviluppatore dell'app</value>
+  </data>
+  <data name="DonateSupport.PickerDescription" xml:space="preserve">
+    <value>Supporta attivamente lo sviluppatore con questa donazione più grande</value>
+  </data>
+  <data name="DonationCompleted" xml:space="preserve">
+    <value>Donazione completata</value>
+  </data>
+  <data name="DonationErrorBody" xml:space="preserve">
+    <value>C'è stato un errore durante la donazione, prova di nuovo</value>
+  </data>
+  <data name="SomethingBadHappened" xml:space="preserve">
+    <value>È successo qualcosa</value>
+  </data>
+  <data name="StoreConnectionError" xml:space="preserve">
+    <value>Errore di connessione</value>
+  </data>
+  <data name="StoreConnectionErrorBody" xml:space="preserve">
+    <value>Lo Store ha avuto un problema di connessione durante l'acquisto, prova di nuovo</value>
+  </data>
 </root>
